# dimensify

./: .env  .envrc  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  AGENTS.md  Cargo.toml  LICENSE  README.md  Trunk.toml  fake-build-wasm.sh  justfile  mise.toml  rustfmt.toml  typos.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
assets/shaders/: line.wgsl
crates/component_derive/: Cargo.toml
crates/component_derive/src/: lib.rs
crates/dimensify/: Cargo.toml  index.trunk.html
crates/dimensify/examples/: Cargo.toml  all_examples3.rs
crates/dimensify/examples/scenario/: ccd3.rs  compound3.rs  convex_polyhedron3.rs  damping3.rs  debug_eccentric_boxes3.rs  debug_internal_edges3.rs  debug_long_chain3.rs  debug_shape_modification3.rs  debug_triangle3.rs  domino3.rs  inverse_kinematics3.rs  joints3.rs  lines.rs  locked_rotations3.rs  one_way_platforms3.rs  primitives3.rs  rope_joints3.rs  trimesh3.rs  urdf3.rs
crates/dimensify/src/: constants.rs  lib.rs  main.rs  test_scene.rs  transport_bridge.rs
crates/dimensify/src/camera/: camera3d.rs  floating_cam_editor_ui.rs  main_camera.rs  mod.rs  window_camera.rs
crates/dimensify/src/collision_checker/: checker.rs  mod.rs
crates/dimensify/src/coordinate_system/: coordsys_transform.rs  mod.rs  type_conversion.rs
crates/dimensify/src/graphics/: helpers.rs  mod.rs  prefab_assets.rs  rapier_prefab_assets.rs
crates/dimensify/src/physics/: mod.rs
crates/dimensify/src/plugins/: draw_contact.rs  highlight_hovered_body.rs  mod.rs  plugin_trait.rs
crates/dimensify/src/pointcloud/: mod.rs
crates/dimensify/src/protocol_response/: list.rs
crates/dimensify/src/robot/: editor_ui.rs  mod.rs  sync_state.rs  ui.rs  urdf_loader.rs
crates/dimensify/src/robot/control/: editor_ui.rs  end_effector.rs  linear_joint_control.rs  mod.rs
crates/dimensify/src/robot/visual/: collision_colour.rs  display_options.rs  show_colliding_link.rs
crates/dimensify/src/scene/: mod.rs  scene_objects.rs  showcase_window.rs
crates/dimensify/src/scene/preset/: mod.rs
crates/dimensify/src/scene_graphics/: helpers.rs  prefab_mesh.rs
crates/dimensify/src/scene_graphics/entity_spawner/: collider_as_entity.rs
crates/dimensify/src/services/: mod.rs  transport_bridge.rs
crates/dimensify/src/services/protocol_response/: controller.rs  draw.rs  list.rs  mod.rs  pending_response.rs
crates/dimensify/src/stream/: mod.rs
crates/dimensify/src/telemetry/: mod.rs
crates/dimensify/src/ui/: mod.rs  rapier_debug_render.rs  scene_explorer.rs  showcase_window.rs  telemetry_timeline.rs  widgets.rs
crates/dimensify/src/urdf_assets_loader/: urdf.rs
crates/dimensify/src/util/: bihashmap.rs  macros.rs  math_trait_ext.rs  mod.rs  pipe.rs  spatial.rs  traits.rs  urdf.rs
crates/dimensify/src/utils/: maybe_formatter.rs  mod.rs
crates/dimensify/src/viewer/: gizmo.rs  mod.rs
crates/dimensify_dev_ui/: Cargo.toml
crates/dimensify_hub/: Cargo.toml
crates/dimensify_ui/: Cargo.toml
crates/dimension/: Cargo.toml
crates/hub/: Cargo.toml
crates/hub/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: components.rs  errors.rs  lib.rs  primitives.rs  requests.rs  telemetry.rs
crates/protocol/src/commands/: gizmo.rs  mod.rs
crates/protocol/src/components/: adopter.rs  custom.rs  mod.rs
crates/robotsim/: Cargo.toml
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs  web_transport.rs
crates/ui/: Cargo.toml
crates/widgets/: Cargo.toml
docs/: api.md  architecture.md  current-state.md  dynamic-systems.md  overview.md  protocol.md
examples/: Cargo.toml  all_examples3.rs  all_examples3_wasm.rs  ccd3.rs  character_controller3.rs  collision_groups3.rs  compound3.rs  convex_decomposition3.rs  convex_polyhedron3.rs  damping3.rs  debug_add_remove_collider3.rs  debug_articulations3.rs  debug_big_colliders3.rs  debug_boxes3.rs  debug_chain_high_mass_ratio3.rs  debug_cube_high_mass_ratio3.rs  debug_cylinder3.rs  debug_deserialize3.rs  debug_dynamic_collider_add3.rs  debug_eccentric_boxes3.rs  debug_friction3.rs  debug_infinite_fall3.rs  debug_internal_edges3.rs  debug_long_chain3.rs  debug_multibody_ang_motor_pos3.rs  debug_pop3.rs  debug_prismatic3.rs  debug_rollback3.rs  debug_shape_modification3.rs  debug_thin_cube_on_mesh3.rs  debug_triangle3.rs  debug_trimesh3.rs  domino3.rs  dynamic_trimesh3.rs  fountain3.rs  harness_capsules3.rs  heightfield3.rs  inverse_kinematics3.rs  joint_motor_position3.rs  joints3.rs  (+16 more)
examples/scenario/: collision_groups3.rs  debug_add_remove_collider3.rs  debug_cube_high_mass_ratio3.rs  debug_deserialize3.rs  spring_joints3.rs
python/: .python-virtualenv  Cargo.toml  pyproject.toml  robotsim.pyi  test_pybullet.py  test_script.sh
python/docs-dev/: migration-checklist.md
python/examples/: example_transport.py
python/src/: client.rs  components.rs  lib.rs  metadata.rs  primitives.rs  shapes.rs  telemetry.rs  visualiser.rs  world.rs
src/: README.md  box2d_backend.rs  camera3d.rs  constants.rs  debug_render.rs  dimensify.rs  editor.rs  graphics.rs  lib.rs  main.rs  mouse.rs  physx_backend.rs  plugin.rs  reexport.rs  sketching.rs  test_scene.rs  testbed.rs  transport_bridge.rs  ui.rs  web_demo.rs
src/assets_loader/: mesh.rs  mod.rs  urdf.rs
src/camera/: editor_ui.rs  floating_cam_editor_ui.rs  main_camera.rs  mod.rs  window_camera.rs
src/collision_checker/: bevy_rapier_helpers.rs  checker.rs  mod.rs  rapier_helpers.rs
src/coordinate_system/: coordsys_transform.rs  mod.rs  transform_and_convert.rs  type_conversion.rs
src/dev/: cam_spawner.rs  egui_toasts.rs  mod.rs  rapier_debug_render.rs  robot_state_setter.rs
src/graphics/: helpers.rs  mod.rs  prefab_assets.rs  prefab_mesh.rs
src/harness/: mod.rs  snapshot.rs
src/objects/: mod.rs  node.rs
src/physics/: collidable.rs  mod.rs
src/plugins/: debug_render.rs  draw_contact.rs  highlight_hovered_body.rs  mod.rs  plugin_trait.rs
src/pointcloud/: mod.rs
src/preset/: mod.rs
src/protocol/: mod.rs
src/rigidbody/: mod.rs
src/robot/: mod.rs  (+8 more)
www/: global.js  main.js  style.css  vite.config.js
(+94 files in other folders)
