[workspace]
members = [
    # "crates/robotsim",
    "crates/dimensify",# "crates/bevy_option_derive",
    #[!cfg(target_arch = "wasm32")]
    # "python",
]
resolver = "2"


[profile.release]
opt-level = 's'
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto       = "thin"
# Enable more optimization in the release profile at the cost of compile time.
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"


[patch.crates-io]
# # force in-direct dependency to use the same version of bevy-egui, the following had bumped to 0.29.0 bevy_egui
# bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", rev="a9ecb3a" }

# for editor pls
bevy_editor_pls = { git = "https://github.com/benfrankel/bevy_editor_pls", branch = "bevy-0-16" }
# bevy_editor_pls = { path = "../bevy_editor_pls" }
