[package]
name = "py-embodx"
version = "0.1.2"
authors = ["soraxas <tin@tinyiu.com>"]
edition = "2021"
license = "proprietary"
readme = "README.md"

[lib]
name = "embodx"
crate-type = ["cdylib"]

[features]
default = ["visualiser"]
visualiser = ["bevy"]

[dependencies]
dimensify = { path = "../crates/dimensify" }
bevy = {version = "0.14", optional = true}
ouroboros = "0.18.4"

# updates the following when this PR is merged: https://github.com/PyO3/rust-numpy/pull/435
pyo3 = { version = "0.21", features = ["abi3-py37", "extension-module", "eyre",
# and remove the following when the PR is merged
"experimental-declarative-modules",
# add cross-compile to winndows
"generate-import-lib",
] }
numpy = "0.21.0"
eyre = "0.6.5"
bevy_winit = "0.14.2"
crossbeam-channel = "0.5.13"
log = "0.4.22"
