[package]
name = "dimensify-py"
version = "0.1.0"
authors = ["soraxas <tin@tinyiu.com>"]
edition = "2021"
license = "proprietary"
readme = "README.md"

[lib]
name = "dimensify"
crate-type = ["cdylib"]

[features]
default = [
  "transport_udp"
]
transport_webtransport = ["dep:dimensify_transport", "dimensify_transport/webtransport"]
transport_websocket = ["dep:dimensify_transport", "dimensify_transport/websocket"]
transport_udp = ["dep:dimensify_transport", "dimensify_transport/udp"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dimensify_protocol = { workspace = true, default-features = false }
dimensify_transport = { workspace = true, optional = true }

# updates the following when this PR is merged: https://github.com/PyO3/rust-numpy/pull/435
pyo3 = { version = "0.27.2", features = [
  "extension-module",
  # add cross-compile to winndows
  "generate-import-lib",
] }
log.workspace = true
paste.workspace = true
