[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dimensify"
dynamic = ["version"]
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.maturin]
module-name = "dimensify"

[dependency-groups]
dev = [
    "maturin>=1.11.2",
    "maturin-import-hook>=0.3.0",
]
