[package]
name    = "dimensify"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev"]
dev = [
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
]
physics = ["dep:rapier3d", "dep:bevy_rapier3d"]
robot   = ["dep:urdf-rs", "dep:k", "dep:mesh-loader"]
gsplat   = ["dep:bevy_gaussian_splatting"]
# default = ["gsplat"]

[dependencies]
# error handling
thiserror  = "1.0.63"
color-eyre = "0.6.3"
eyre       = "0.6.12"
log        = "0.4.22"


# ==============================
# Optional dependencies
# ==============================
k           = { version = "0.32.0", optional = true }
mesh-loader = { version = "0.1.12", optional = true }

# use the same version of rapier3d as bevy_rapier3d
rapier3d = { version = "0.27.0-beta.0", optional = true }
urdf-rs = { version = "0.9.0", optional = true }

# ==============================
serde   = "1.0.210"
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }

# [target.wasm32-unknown-unknown.dependencies]
# getrandom    = { version = "0.3", features = ["wasm_js"] }

# this is needed for the bevy_editor_pls crate, and the egui-notify crate.
# pinning to ensure they are compatible with the bevy_egui crate
paste                = "1.0.15"
strum                = { version = "0.26.3", features = ["derive"] }
nalgebra             = "0.33.2"
reqwest                 = "0.12.9"

###############################
# bevy-related dependencies
###############################
bevy_panorbit_camera = { version = "0.33", features = [
    "bevy_egui"
] }
smooth-bevy-cameras  = "0.14"
bevy_rapier3d = { version = "0.31.0", optional = true }
bevy_crossbeam_event = "0.9.0"

# need to wait till the bevy_editor_pls crate is updated to 0.11.0
# bevy_editor_pls = "0.11.0"
bevy-inspector-egui = "0.35.0"

bevy_egui = { version = "0.38", default-features = false, features = [
    # "manage_clipboard",
    "open_url",
    "default_fonts",
    "render",
    "bevy_ui",
    "picking",
] }

###############################

# # graphics
# # bevy_2d_line       = "0.1.2"
# bevy_polyline      = "0.13"
bevy_infinite_grid = "0.17"
egui_tiles = "0.14.0"
# bevy-egui-notify   = "0.18"
# # bevy_web_asset = "*"


# # bevy_web_asset = { git = "https://github.com/soraxas/bevy_web_asset.git", branch = "feat-cache-to-disk", features = ["cache_asset"] }
# bevy_web_asset = "0.11.0"
[dependencies.bevy]
version = "0.17"
features = [
  "jpeg",
  "web_asset_cache",
]

[dependencies.bevy_gaussian_splatting]
version = "6.0.0"
optional = true
# default features contains viewer, which is not needed...
default-features = false
features = [
  "io_flexbuffers",
  "io_ply",
  "planar",
  "buffer_storage",
  "sh3",
  "query_select",
  # "query_sparse",

  "sort_bitonic",
  "sort_radix",
  "sort_rayon",
  "sort_std",
]


[dependencies.getrandom_v03]
package = "getrandom"
version = "0.3"
features = ["wasm_js"]

[dependencies.getrandom_v02]
package = "getrandom"
version = "0.2"
features = ["js"]

[[bin]]
name = "dimensify"
path = "../../src/main.rs"

[lib]
name = "dimensify"
path = "../../src/lib.rs"

[profile.release]
opt-level = 's'
lto       = "thin"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-debug]
inherits      = "dev"
opt-level     = 1
lto           = "off"
codegen-units = 256
wasm-opt = false

[profile.wasm-release]
inherits      = "release"
opt-level     = "z"
lto           = "fat"
codegen-units = 1

# [build]
# target = "x86_64-unkown-linux-gnu"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
web-sys = "0.3.72"
# wasm-bindgen = "0.2"
