[package]
name    = "dimensify"
authors.workspace = true
description = "The Dimensify library for visualising and simulating robot motion."
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true
include = [
  # "../../Cargo.lock",
  "**/*.rs",
  "Cargo.toml",
]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = ["dev"]
dev = [
  "dep:dimensify_dev_ui",
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
]
transport = [
  "dep:dimensify_transport",
  "dep:lightyear",
  "lightyear/client",
  "lightyear/server",
  "lightyear/raw_connection",
]
transport_webtransport = ["transport", "dimensify_transport/webtransport", "lightyear/webtransport"]
transport_websocket = ["transport", "dimensify_transport/websocket", "lightyear/websocket"]
transport_udp = ["transport", "dimensify_transport/udp", "lightyear/udp"]
hub = ["dep:dimensify_hub", "transport"]
physics = ["dep:rapier3d", "dep:bevy_rapier3d"]
robot   = ["dep:urdf-rs", "dep:k", "dep:mesh-loader"]
gsplat  = ["dep:bevy_gaussian_splatting"]

[dependencies]
const-fnv1a-hash = "1.1.0"
dimensify_dev_ui = { workspace = true, optional = true }
dimensify_transport = { workspace = true, optional = true }
dimensify_hub = { workspace = true, optional = true }
lightyear = { version = "0.25.5", default-features = false, optional = true }

# error handling
thiserror  = "1.0.63"
color-eyre = "0.6.3"
eyre       = "0.6.12"
log        = "0.4.22"


# ==============================
# Optional dependencies
# ==============================
k           = { version = "0.32.0", optional = true }
mesh-loader = { version = "0.1.12", optional = true }

# use the same version of rapier3d as bevy_rapier3d
rapier3d = { version = "0.27.0-beta.0", optional = true }
urdf-rs = { version = "0.9.0", optional = true }

# ==============================
serde   = "1.0.210"
serde_json = "1.0"
zerocopy = { version = "0.8.14", features = ["derive"] }
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }

# [target.wasm32-unknown-unknown.dependencies]
# getrandom    = { version = "0.3", features = ["wasm_js"] }

# this is needed for the bevy_editor_pls crate, and the egui-notify crate.
# pinning to ensure they are compatible with the bevy_egui crate
paste                = "1.0.15"
strum                = { version = "0.26.3", features = ["derive"] }
nalgebra             = "0.33.2"
reqwest                 = "0.12.9"


bevy.workspace = true
bevy_egui.workspace = true
bevy_rapier3d = { workspace = true, optional = true }
smooth-bevy-cameras  = { workspace = true }
bevy_crossbeam_event = { workspace = true }
bevy_panorbit_camera = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_infinite_grid = { workspace = true }
egui_tiles = { workspace = true }
# bevy_pointcloud = { version = "0.1.0", features = ["webgl"],  git = "https://github.com/rlamarche/bevy_pointcloud"}


[dependencies.bevy_gaussian_splatting]
version = "6.0.0"
optional = true
# default features contains viewer, which is not needed...
default-features = false
features = [
  "io_flexbuffers",
  "io_ply",
  "planar",
  "buffer_storage",
  "sh3",
  "query_select",
  # "query_sparse",

  "sort_bitonic",
  "sort_radix",
  "sort_rayon",
  "sort_std",
]


[dependencies.getrandom_v03]
package = "getrandom"
version = "0.3"
features = ["wasm_js"]

[dependencies.getrandom_v02]
package = "getrandom"
version = "0.2"
features = ["js"]

[[bin]]
name = "dimensify"
path = "../../src/main.rs"

[lib]
name = "dimensify"
path = "../../src/lib.rs"

# [profile.release]
# opt-level = 's'
# lto       = "thin"

# # Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

# [profile.wasm-dev]
# inherits = "dev"
# opt-level = 2
# debug = 1
# strip = "debuginfo"
# panic = "abort"
# codegen-units = 16
# lto = false

# [profile.wasm-debug]
# inherits      = "dev"
# opt-level     = 1
# lto           = "off"
# codegen-units = 256
# # wasm-opt = false

# [profile.wasm-release]
# inherits      = "release"
# opt-level     = "z"
# lto           = "fat"
# codegen-units = 1

# [build]
# target = "x86_64-unkown-linux-gnu"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
web-sys = "0.3.72"
# wasm-bindgen = "0.2"
