[package]
name = "dimensify_hub"
version = "0.1.0"
edition = "2024"

[features]
default = []
lightyear = ["dep:dimensify_transport"]

[dependencies]
bevy.workspace = true
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"
dimensify_transport = { path = "../transport", version = "0.1.0", optional = true }
