[package]
name = "dimensify_hub"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
lightyear = ["dep:dimensify_transport"]

[dependencies]
bevy.workspace = true
serde.workspace = true
thiserror.workspace = true
dimensify_transport = { workspace = true, optional = true }
