[package]
name = "dimensify_protocol"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bevy_ecs = { workspace = true}
bevy_log = { workspace = true}
bevy_app = { workspace = true}
bevy_internal = { workspace = true}


zerocopy = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
