[package]
name = "dimensify_protocol"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = [
  "bevy",
]
bevy = [
  "dep:bevy",
  # "dep:bevy_ecs",
  # "dep:bevy_log",
  # "dep:bevy_app",
]
serialize = [
  "bevy_math/serialize",
  "bevy_math/bevy_reflect",
]

[lints]
workspace = true

[dependencies]
# bevy_log = { workspace = true, optional = true }
# bevy_app = { workspace = true, optional = true }
bevy = { workspace = true, optional = true }
bevy_ecs = { workspace = true }
# for shape primitives like Cuboid, Cylinder, etc.
bevy_math = { workspace = true }

zerocopy = { workspace = true, features = ["derive"] }
zerocopy-derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
